--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/comfortaa": "^0.4.1",
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "~2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@types/react": "~19.0.14",
     "expo": "~53.0.0",
+    "expo-font": "^13.3.2",
     "expo-health-kit": "^1.0.8",
     "expo-router": "~5.1.5",
     "nativewind": "^4.0.36",
