--- a/package.json
+++ b/package.json
@@ -19,28 +19,31 @@
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.4.1",
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "~2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "@types/react": "~19.0.14",
-    "expo": "~53.0.0",
-    "expo-font": "^13.3.2",
-    "expo-health-kit": "^1.0.8",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-router": "~5.1.5",
+    "@react-native-async-storage/async-storage": "~2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@types/react": "~19.1.12",
+    "expo": "~54.0.2",
+    "expo-constants": "~18.0.8",
+    "expo-font": "^14.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.1",
     "nativewind": "^4.0.36",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-css-interop": "^0.1.22",
     "react-native-modal-datetime-picker": "^14.0.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.1",
-    "react-native-web": "^0.20.0"
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   }
 }
