install biome js, refactor

--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "expo start --web --tunnel",
+    "dev": "expo start --tunnel -c",
     "dev:client": "expo start --dev-client --tunnel",
-    "dev:tunnel": "expo start --tunnel -c",
-    "dev:lan": "expo start --lan -c",
-    "dev:local": "expo start --localhost -c",
-    "start": "expo start",
-    "ios": "expo run:ios",
+    "ios": "expo run:ios --device \"iPhone 17 Pro\"",
     "android": "expo run:android",
     "web": "expo start --web",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint .",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write .",
     "icons": "node scripts/generate-icons.js",
     "eas": "eas",
     "eas:login": "eas login",
-    "build:dev:ios": "eas build --platform ios --profile development",
-    "build:preview:ios": "eas build --platform ios --profile preview",
+    "eas:build:dev:ios": "eas build --platform ios --profile development",
+    "eas:build:preview:ios": "eas build --platform ios --profile preview",
     "prebuild:ios": "npx expo prebuild -p ios --clean"
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.4.1",
+    "@expo/ui": "~0.2.0-beta.1",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "~2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
@@ -32,8 +31,10 @@
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.12",
     "expo-font": "^14.0.8",
+    "expo-glass-effect": "^0.1.2",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-mesh-gradient": "~0.4.7",
     "expo-router": "~6.0.1",
     "nativewind": "^4.0.36",
     "react": "19.1.0",
@@ -46,9 +47,11 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.1",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "swift-ui": "link:@expo/ui/swift-ui"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
     "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.7",
     "typescript": "~5.9.2"
