small revise, image optimization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     ".expo/types/**/*.ts",
     "src/types/expo-env.d.ts",
     "src/types/nativewind-env.d.ts",
-    "src/types/global.d.ts"
+    "src/types/global.d.ts",
+    "nativewind-env.d.ts",
+    "expo-env.d.ts"
   ]
 }
