--- a/app.json
+++ b/app.json
@@ -4,10 +4,7 @@
     "slug": "stepup-app",
     "scheme": "stepup-app",
     "userInterfaceStyle": "automatic",
-    "plugins": [
-      "expo-router",
-      "expo-font"
-    ],
+    "plugins": ["expo-router", "expo-font", "expo-dev-client"],
     "experiments": {
       "typedRoutes": true
     },
