--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.4.1",
-    "@expo/ui": "~0.2.0-beta.1",
+    "@expo/ui": "0.2.0-beta.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "~2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/slider": "^5.0.1",
     "@types/react": "~19.1.12",
     "expo": "~54.0.2",
+    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.12",
     "expo-font": "^14.0.8",
     "expo-glass-effect": "^0.1.2",
+    "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-mesh-gradient": "~0.4.7",
