--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.28.9",
     "expo-mesh-gradient": "~0.4.7",
     "expo-router": "~6.0.1",
     "nativewind": "^4.0.36",
