func: wakewalk session and integrate with commit graph

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "UNNotificationExtensionCategory": ["ALARM_CATEGORY"],
+        "NSMotionUsageDescription": "StepUp uses your motion activity to count wake-walk steps.",
         "UIBackgroundModes": [
           "audio",
           "fetch",
