--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-notifications": "~0.28.9",
     "expo-mesh-gradient": "~0.4.7",
+    "expo-notifications": "~0.28.9",
     "expo-router": "~6.0.1",
+    "expo-sensors": "~15.0.7",
     "nativewind": "^4.0.36",
     "react": "19.1.0",
     "react-dom": "19.1.0",
