--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stepup-app",
+  "name": "wakewalk",
   "version": "0.0.1",
   "private": true,
   "main": "index.js",
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
+    "babel-preset-expo": "^54.0.2",
     "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.7",
     "typescript": "~5.9.2"
