--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
+    "@expo/config-plugins": "^54.0.1",
     "babel-preset-expo": "^54.0.2",
     "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.7",
