--- a/app.json
+++ b/app.json
@@ -18,7 +18,15 @@
           ]
         }
       ],
-      "./plugins/withAlarmManager"
+      "./plugins/withAlarmManager",
+      [
+        "react-native-google-mobile-ads",
+        {
+          "androidAppId": "ca-app-pub-7995063718547265~4504119427",
+          "iosAppId": "ca-app-pub-7995063718547265~4504119427",
+          "delay_app_measurement_init": true
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
@@ -27,9 +35,7 @@
       "bundleIdentifier": "com.itaruo93o.wakewalk",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
-        "UNNotificationExtensionCategory": [
-          "ALARM_CATEGORY"
-        ],
+        "UNNotificationExtensionCategory": ["ALARM_CATEGORY"],
         "NSMotionUsageDescription": "WakeWalk uses your motion activity to count wake-walk steps.",
         "UIBackgroundModes": [
           "audio",
@@ -47,9 +53,7 @@
     },
     "android": {
       "package": "com.itaruo93o.wakewalk",
-      "permissions": [
-        "NOTIFICATIONS"
-      ]
+      "permissions": ["NOTIFICATIONS"]
     },
     "owner": "itaruo93o"
   }
