--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-css-interop": "^0.2.0",
+    "react-native-google-mobile-ads": "^15.7.0",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "5.6.1",
