--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.0.1",
     "@types/react": "~19.1.12",
+    "dotenv": "^17.2.2",
     "expo": "~54.0.2",
     "expo-av": "^16.0.7",
     "expo-constants": "~18.0.8",
@@ -48,6 +49,8 @@
     "react-native-css-interop": "^0.2.0",
     "react-native-google-mobile-ads": "^15.7.0",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-purchases": "^9.5.0",
+    "react-native-purchases-ui": "^9.5.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
