Set app version to 1.0.0, added iOS auto-submit build script. Added TODO comments for icon updates in multiple components.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eas:build:preview:ios": "eas build --platform ios --profile preview",
     "eas:build:production:ios": "eas build --platform ios --profile production",
     "eas:submit:ios": "eas submit --platform ios",
+    "eas:build:production:ios:auto-submit": "eas build --platform ios --profile production --auto-submit",
     "prebuild:ios": "npx expo prebuild -p ios"
   },
   "dependencies": {
