--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "expo-notifications": "~0.28.9",
     "expo-router": "~6.0.1",
     "expo-sensors": "~15.0.7",
+    "expo-splash-screen": "^31.0.10",
     "nativewind": "^4.0.36",
     "react": "19.1.0",
     "react-dom": "19.1.0",
