--- a/eas.json
+++ b/eas.json
@@ -8,6 +8,12 @@
       "developmentClient": true,
       "distribution": "internal"
     },
+    "personal": {
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_PREMIUM_OVERRIDE": "true"
+      }
+    },
     "preview": {
       "distribution": "internal"
     },
