--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eas": "eas",
     "eas:login": "eas login",
     "eas:build:dev:ios": "eas build --platform ios --profile development",
+    "eas:build:personal:ios": "eas build --platform ios --profile personal",
     "eas:build:preview:ios": "eas build --platform ios --profile preview",
     "eas:build:production:ios": "eas build --platform ios --profile production",
     "eas:submit:ios": "eas submit --platform ios",
