--- a/eas.json
+++ b/eas.json
@@ -6,19 +6,23 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "development"
     },
     "personal": {
       "distribution": "internal",
+      "channel": "personal",
       "env": {
         "EXPO_PUBLIC_PREMIUM_OVERRIDE": "true"
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "preview"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "channel": "production"
     }
   },
   "submit": {
